--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "distro": "run-s build test:build",
     "build": "rollup -c",
     "test:build": "mocha --reporter=spec --recursive test/distro",
-    "prepublishOnly": "run-s distro"
+    "prepublishOnly": "run-s distro",
+    "generate-schema": "node tasks/generate-schema"
   },
   "repository": {
     "type": "git",
